@@ -243,6 +243,21 @@ let tests () =
     done;
     test 16 true !return
   end;
+  test 17 true
+    (test_setget float16
+                 [0.0, 0.0;
+                  -0.5, -0.5;
+                  1.0, 1.0;
+                  infinity, infinity;
+                  neg_infinity, neg_infinity;
+                  Float.min_float, 0.0;
+                  Float.max_float, infinity;
+                  65504.0, 65504.0;
+                  -65504.0, -65504.0;
+                  65519.0, 65504.0;
+                  -65519.0, -65504.0;
+                  65520.0, infinity;
+                  -65520.0, neg_infinity]);
 
   testing_function "set/get (specialized)";
   let a = Array1.create int c_layout 3 in
